Fixed section1 alignment with header

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
     font-weight: 300;
     color: #f2f2f2;
     background-color: black;
+    
 }
 
 h1, h2 {
@@ -36,6 +37,7 @@ header #menu {
 
 header #menu, #logo {
     line-height: 75px;
+    min-height: 100px;
 }
 
  header #menu li {
